@@ -5,6 +5,7 @@ Date: 2020.09.XX
     - Added setting `Color intensity`, affecting how bright structures, vehicles and robots appear in-world
   Changes:
     - Improved clarity of tier labels at 16px; removed tier labels for 6th tier
+    - Added support for `icon_picture_extras` in function `create_icons_from_list`
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2020.08.24
